--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the repository for my semester project 2 at Noroff. Christmas 2023",
   "main": "index.js",
   "scripts": {
-    "build": "sass src/scss:dist/css"
+    "build": "sass src/scss:dist/css",
+    "watch": "sass --watch src/scss:dist/css"
   },
   "keywords": [],
   "author": "",
