--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
   "name": "semesterproject2",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "This is the repository for my semester project 2 at Noroff. Christmas 2023",
   "main": "index.js",
   "scripts": {
     "build": "sass src/scss:dist/css",
-    "watch": "sass --watch src/scss:dist/css"
+    "watch": "sass --watch src/scss:dist/css",
+    "start": "live-server"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "keywords": [
+    "CSS",
+    "Frameworks",
+    "Bootstrap",
+    "SCSS",
+    "SASS"
+  ],
+  "author": "Mikael Selstad <mikael.selstad@gmail.com>",
   "license": "ISC",
+  "bugs": {
+    "url": ""
+  },
+  "homepage": "",
   "dependencies": {
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.11.1",
+    "live-server": "^1.1.0"
   },
   "devDependencies": {
-    "sass": "^1.69.5"
+    "sass": "^1.66.1"
   }
 }
