adding live server and updating bootstrap

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Mikael Selstad <mikael.selstad@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/Miksel90/SemesterProject2/issues"
   },
   "homepage": "",
   "dependencies": {
